css/jeeSite.css
/*Add CSS animation somewhere on here to meet course requirements*/
a {
  color: #4c4c4c;
}
a:hover {
  color: #00AAff;
  text-decoration: none;
}
section {
  margin-bottom: 1%;
  border-bottom: 1px solid #efefef;
}
body {
  background-color: #efefef;
  /*padding top because navbar is fixed position and overlaps content*/
  padding-top: 90px;
}
.navbar button.navbar-toggle{
  margin-left: 1%;
  margin-right: 4%;
  padding: 5px;
}
.outline {
  display: none;
}
.container {
  background-color: #fff;
  border: 1px solid #ddd;
}
.sectionHeader {
  margin-bottom: 3%;
}
.portfolioGrid div {
  margin-bottom: 2%;
}
.myNavStyle {
  background-color: #fff;
  border-style: none;
  text-align: center;
}
.backToTopWrapper {
  text-align: center;
  cursor: pointer;
  margin-bottom: 1%;
}
.backToTopWrapper span {
  margin-left: 1%;
  font-size: 24px;
  color: #ccc;
}
.backToTop {
  background-color: #ddd;
  color: #fff;
  padding: 0.5%;
  font-size: 20px;
  border-radius: 15%;
  margin-left: auto;
  margin-right: auto;
}
.contactBtnWrapper {
  text-align: center;
}
.socialMediaArray {
  list-style: none;
  text-align: center;
}
.socialMediaArray li {
  display: inline;
  margin-right: 1%;
}
.socialMediaArray i {
  line-height: 50px;
}
.roundBtn {
  border-radius: 50%;
  background-color: #4c4c4c;
  color: #fff;
  width: 50px;
  height: 50px;
}
.ownerFooter {
  color: #ccc;
}
.textOutlineBlack {
  text-shadow: 0.5px 0.5px #000;
}
/*override boostrap btn-primary style*/
.btn-primary {
  background-color: #00AAff;
}
/* Added to prevent my fixed position navbar from overlapping content when 'back to top' link is used */
#top{
  position: relative;
  top: -250px;
  visibility: hidden;
}
#about{
  background-image: url('../img/matherMe.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-position: right;
  min-height: 25%;
  color: #fff;
}
/* Small devices can't handle the bg-attachment fixed, so on those devices use scroll*/
@media (max-width: 1024px) {
  #about{
    background-attachment: scroll;
  }
}
#about div {
  background-color: rgba(0, 0, 0, 0.3);
  min-height: inherit;
  padding: 5%;
}
#about a {
  color: #00AAff;
}
#about a:hover {
  color: #000;
}
#btnSubmit {
  margin-left: 0 auto;
}
#myNavTop a {
  font-weight: bold;
  font-size: 20px;
  letter-spacing: 0.05em;
}
#portfolioNav {
  text-align: center;
}
#portfolioNav a {
  font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-size: 20px;
  vertical-align: bottom;
}
#divBanner {
  font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  color: #4c4c4c;
  border-bottom: 2px solid #ccc;
  margin-bottom: 1%;
  margin-top: 1%;
  padding-bottom: 1%;
}
#divBanner h1 {
  display: inline-block;
  vertical-align: middle;
}
#photoBubble {
  border-radius: 50%;
  margin-right: 1%;
  background-color: rgba 255, 255, 255, 1;
}
#contact input {
  width: 100%;
  height: 50px;
  font-size: 18px;
  margin-bottom: 10px;
  padding: 5px;
}
#contact button {
  margin: 0 auto;
  padding: 10px;
  font-size: 20px;
}
#moon{
  display: inline-block;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  vertical-align: bottom;
  margin-right: 1%;
  background-color: #1f235d;

}
/*goofy fun with css hover events and such. trivial*/
/*#moon>h3{
  color: #00AAff;
  cursor: pointer;
  position: relative;
  left: 25%;
  opacity: 0;
  transition: opacity 1s ease;
}

#moon:hover>h3{
  opacity: 1;
}

#moon ~p#moonHelpText {
  position: absolute;
  left: 50%;
  margin-left: -10%;
  background-color: #000;
  color: #fff;
  opacity: 0;
  transition: opacity 1s ease;
  padding: 1%;
  z-index: 1;
}*/

/*#moon:hover ~p#moonHelpText{
  opacity: 1;
}*/

